# Goodminton-Bot

./: LICENSE  README.md  bot.py  pyproject.toml
goodminton/: courts.py  filters.py  scraper.py
