[tool.poetry]
name = "goodminton-bot"
version = "0.1.0"
description = "A Telegram bot for checking Badminton availabilities at Monash sport."
authors = ["Floyd Everest <floyd.everest@monash.edu>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
tree-sitter = "^0.22.3"
tree-sitter-javascript = "^0.21.4"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
