[tool.poetry]
name = "goodminton-bot"
version = "0.1.0"
description = "A Telegram bot for checking Badminton availabilities at Monash sport."
authors = ["Floyd Everest <floyd.everest@monash.edu>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
tree-sitter = "^0.22.3"
tree-sitter-javascript = "^0.21.4"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
flake8 = "^7.1.1"
black = "^24.8.0"
flake8-black = "^0.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
